--- a/assignment-app-fronted/angular.json
+++ b/assignment-app-fronted/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "assignment-app-fronted": {
+    "assignment-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/assignment-app-fronted",
+            "outputPath": "dist/assignment-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -25,15 +25,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -63,10 +58,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "assignment-app-fronted:build:production"
+              "buildTarget": "assignment-app:build:production"
             },
             "development": {
-              "buildTarget": "assignment-app-fronted:build:development"
+              "buildTarget": "assignment-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +69,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "assignment-app-fronted:build"
+            "buildTarget": "assignment-app:build"
           }
         },
         "test": {
@@ -90,6 +85,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -99,6 +95,6 @@
     }
   },
   "cli": {
-    "analytics": "c676586d-c594-4211-83bd-ad72c74b0159"
+    "analytics": false
   }
 }
